--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <span class="key">Press any key</span> to view the next example.
       </p>
       <p style="padding:1em .2em;background:#999">
-        Get the <span class="key">source</span> on <a href="http://github.com/hrj/box2d-js">GitHub</a>.
+        More info and <span class="key">source</span> on <a href="http://github.com/hrj/box2d-js">GitHub</a>.
       </p>
 
     </div>
