--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <body>
     <div id="CONTAINER">
       <p style="font-size:60%;margin-bottom:7em;"><span id="fpsText"></span> FPS <span id="stepSize"></span> Step size <span id="delayVal"></span> delay(ms)</p>
-      <p style="font-size:120%;">Box2D JS demo</p>
+      <p style="font-size:120%;">Box2D JS demo<span id="message"></span></p>
       <div id="canvas" style="width:600px;height:400px;"></div>
       <p>
         <span class="key">Left-click</span> to spawn an object.
