--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </head>
   <body>
     <div id="CONTAINER">
-      <p style="font-size:60%;margin-bottom:7em;"><span id="fpsText"></span> FPS <span id="stepSize"></span> Step size <span id="delayVal"></span> delay(ms)</p>
+      <p style="font-size:60%;margin-bottom:3em;"><span id="fpsText"></span> FPS <span id="stepSize"></span> Step size <span id="delayVal"></span> delay(ms)</p>
       <p style="font-size:120%;">Box2D JS demo<span id="message"></span></p>
       <div id="canvas" style="width:600px;height:400px;"></div>
       <p>
@@ -45,9 +45,13 @@
       <p>
         <span class="key">Press any key</span> to view the next example.
       </p>
-      <p style="padding:1em .2em;background:#999">
-        More info and <span class="key">source</span> on <a href="http://github.com/hrj/box2d-js">GitHub</a>.
-      </p>
+      <div style="padding:0.2em .2em;background:#999">
+        <p> More info and <span class="key">source</span> on <a href="http://github.com/hrj/box2d-js">GitHub</a>.  </p>
+        <p>
+          <script type="text/javascript"> var flattr_url = 'http://lavadip.com/box2d_demo/index.html'; </script>
+          <script src="http://api.flattr.com/button/load.js" type="text/javascript"></script>
+        </p>
+      </div>
 
     </div>
   </body>
